feat(intelli-ai-repairer-main): 增加 AI 响应监听器并优化修复逻辑
- body:
  - 新增 RepairerAIResponseListener 类用于输出 AI 请求, 响应与 Token 使用信息到控制台, 便于调试与监控
  - 在 ViolationFixer 和 AICheckstyleFix 中传入新监听器以增强 AI 交互日志能力
  - 将 verified.get(0) 替换为 verified.getFirst() 以适配 Java 16+ 语法并提升代码可读性
  - 重构 ImportStaticReportAction#selectRepairerTab 方法, 移除反射调用并改用 ToolWindowManager 直接定位并激活问题视图标签页, 提升稳定性与兼容性